# Cultibot

./: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: AM2302.c  AM2302.h  CMakeLists.txt  climacontrol.c  climacontrol.h  climate_control.c  climate_control.h  cultibot.h  espnow_water.c  espnow_water.h  i2c_lcd.c  i2c_lcd.h  main.c  menu_LCD.c  menu_LCD.h  mqtt.c  mqtt.h  nvs_manager.c  nvs_manager.h  protocolWater.h  server.c  server.h  sntp.c  sntp.h  wifi.c  wifi.h
main/html/: clima.html  config.html  config2.html  dash.html  riego.html
